--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>p5js App</title>
     </head>
     <body>
+        <hl>The Wizard of Oz in Technicolor</hl>
      <div id="sketch-holder"></div>
     </body>
 </html>
